fixed wrong fontface

--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -441,12 +441,11 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .fk-grotesk-neue {
-    font-family: "FK Raster Grotesk Neue", sans-serif;
-
+    font-family: "FK Grotesk Neue", sans-serif;
 }
 
 @font-face {
-    font-family: "FK Raster Grotesk Neue";
+    font-family: "FK Grotesk Neue";
     src: url("../fonts/FK Grotesk Neue Trial/fk-grotesk-neue-regular.woff2");
     font-weight: 400;
     font-style: normal;
